--- a/src/app/user/sign-in/sign-in.html
+++ b/src/app/user/sign-in/sign-in.html
@@ -1,44 +1,51 @@
-@if (this.stateMsg != null) {
-  <div class="alert alert-success">
-    {{this.stateMsg}}
-  </div>
-}
+<section class="auth">
+  <div class="auth__shell">
+    <div class="auth__hero">
+      <p class="auth__eyebrow">Welcome back</p>
+      <h1>Sign in to GoodStuff</h1>
+      <p class="auth__subhead">Access your dashboard, orders, and saved builds in seconds.</p>
+      <div class="auth__stat">
+        <span>Fast checkout</span>
+        <span>Order tracking</span>
+        <span>Secure login</span>
+      </div>
+      <a [routerLink]="['/user/sign-up']" class="auth__ghost">Create account</a>
+    </div>
 
-<div class="d-flex col-12 justify-content-center">
-  <div class="sign-in p-3">
-    <h4 class="border-bottom pb-1">Sign In</h4>
-    <div class="row">
-      <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="col-6 border-right float-left">
-
-        <div class="form-group py-2">
-          <label>Email</label>
-          <input formControlName="email" name="email" type="email" class="form-control" required/>
+    <div class="auth__card">
+      @if (this.stateMsg != null) {
+        <div class="auth__notice auth__notice--success">
+          {{this.stateMsg}}
         </div>
+      }
 
-        <div class="form-group py-2">
-          <label>Password</label>
-          <input formControlName="password" name="password" type="password" class="form-control" required/>
-        </div>
+      <h2>Sign In</h2>
+      <p class="auth__hint">Use the email you registered with.</p>
+
+      <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+        <label class="auth__label">Email</label>
+        <input formControlName="email" name="email" type="email" class="auth__input" placeholder="you@email.com" required/>
+
+        <label class="auth__label">Password</label>
+        <input formControlName="password" name="password" type="password" class="auth__input" placeholder="••••••••" required/>
 
         @if (this.errors.length != 0) {
-          <div class="alert alert-danger">
+          <div class="auth__notice auth__notice--error">
             <ul>
-            @for (error of errors; track error)
-            {
-              <li>{{error}}</li>
-            }
+              @for (error of errors; track error) {
+                <li>{{error}}</li>
+              }
             </ul>
           </div>
         }
-        <button type="submit" class="btn btn-primary my-2 font-weight-bold">Sign In</button>
+
+        <button type="submit" class="auth__primary">Sign In</button>
       </form>
-      <div class="col-6 float-left">
-        <h4>Don't have account yet?</h4>
-        <h5>It's good time to Sign Up!</h5>
-        You don't have choice anyway, without it you can't buy anything.
-        <i class="fa-regular fa-face-smile-wink"></i>
-        <a [routerLink]="['/user/sign-up']" class="btn btn-primary mt-2 font-weight-bold d-block">Sign Up</a>
+
+      <div class="auth__foot">
+        <span>New here?</span>
+        <a [routerLink]="['/user/sign-up']">Sign up instead</a>
       </div>
     </div>
   </div>
-</div>
+</section>
