--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="app-shell">
   <app-nav/>
-
+  <main class="app-main">
     <router-outlet/>
+  </main>
 </div>
-
