--- a/src/app/categories/category-card/category-card.html
+++ b/src/app/categories/category-card/category-card.html
@@ -1,6 +1,6 @@
-<a [routerLink]="['products',category()]">
-  <div class="category-card d-grid justify-content-center align-items-center ">
-    <img width="96" height="96" ngSrc="{{categoryImgPath()}}" alt="categoryIcon">
-    <span class="d-block text-center">{{category()}}</span>
+<a class="category-card" [routerLink]="['products',category()]">
+  <div class="category-card__icon">
+    <img width="96" height="96" ngSrc="{{categoryImgPath()}}" alt="category icon">
   </div>
+  <span class="category-card__label">{{category()}}</span>
 </a>
